--- a/.github/workflows/backend-tests.yml
+++ b/.github/workflows/backend-tests.yml
@@ -57,8 +57,10 @@ jobs:
     - name: Cache Poetry dependencies
       uses: actions/cache@v3
       with:
-        path: ~/.cache/pypoetry
-        key: ${{ runner.os }}-poetry-${{ hashFiles('backend/poetry.lock') }}
+        path: |
+          ~/.cache/pypoetry
+          ~/.local/share/pypoetry
+        key: ${{ runner.os }}-poetry-${{ hashFiles('backend/poetry.lock') }}-v2
         restore-keys: |
           ${{ runner.os }}-poetry-
     
