--- a/.github/workflows/backend-tests.yml
+++ b/.github/workflows/backend-tests.yml
@@ -54,15 +54,16 @@ jobs:
         curl -sSL https://install.python-poetry.org | python3 -
         echo "$HOME/.local/bin" >> $GITHUB_PATH
     
-    - name: Cache Poetry dependencies
-      uses: actions/cache@v3
-      with:
-        path: |
-          ~/.cache/pypoetry
-          ~/.local/share/pypoetry
-        key: ${{ runner.os }}-poetry-${{ hashFiles('backend/poetry.lock') }}-v2
-        restore-keys: |
-          ${{ runner.os }}-poetry-
+    # TODO: Fix the caching on Poetry
+    # - name: Cache Poetry dependencies
+    #   uses: actions/cache@v3
+    #   with:
+    #     path: |
+    #       ~/.cache/pypoetry
+    #       ~/.local/share/pypoetry
+    #     key: ${{ runner.os }}-poetry-${{ hashFiles('backend/poetry.lock') }}-v2
+    #     restore-keys: |
+    #       ${{ runner.os }}-poetry-
     
     - name: Install dependencies
       working-directory: ./backend
