--- a/.github/workflows/frontend-tests.yml
+++ b/.github/workflows/frontend-tests.yml
@@ -14,6 +14,9 @@ on:
 
 jobs:
   test:
+    # Skip if commit message contains [skip ci] or [no ci]
+    if: "!contains(github.event.head_commit.message, '[skip ci]') && !contains(github.event.head_commit.message, '[no ci]')"
+    
     runs-on: ubuntu-latest
 
     steps:
