--- a/frontend/Dockerfile
+++ b/frontend/Dockerfile
@@ -3,8 +3,8 @@ FROM node:20-alpine AS builder
 
 WORKDIR /app
 
-# Install pnpm
-RUN npm install -g pnpm
+# Enable corepack and set pnpm version to match package.json
+RUN corepack enable && corepack prepare pnpm@10.17.1 --activate
 
 # Copy dependency files
 COPY package.json pnpm-lock.yaml ./
