--- a/backend/pyproject.toml
+++ b/backend/pyproject.toml
@@ -26,6 +26,7 @@ openpyxl = "^3.1.0"
 python-multipart = "^0.0.6"
 pydantic-settings = "^2.0.0"
 numpy = "^1.26.0"
+pgvector = "^0.2.0"
 
 [tool.poetry.group.dev.dependencies]
 pytest = "^7.4.0"
@@ -61,6 +62,7 @@ module = [
     "celery.*",
     "redis.*",
     "sentence_transformers.*",
+    "pgvector.*",
 ]
 ignore_missing_imports = true
 
