--- a/backend/pyproject.toml
+++ b/backend/pyproject.toml
@@ -27,6 +27,10 @@ python-multipart = "^0.0.6"
 pydantic-settings = "^2.0.0"
 numpy = "^1.26.0"
 pgvector = "^0.2.0"
+kagglehub = "^0.3.0"
+pycryptodome = "^3.20.0"
+matplotlib = "^3.8.0"
+networkx = "^3.1"
 
 [tool.poetry.group.dev.dependencies]
 pytest = "^7.4.0"
