--- a/backend/pyproject.toml
+++ b/backend/pyproject.toml
@@ -31,6 +31,7 @@ kagglehub = "^0.3.0"
 pycryptodome = "^3.20.0"
 matplotlib = "^3.8.0"
 networkx = "^3.1"
+nltk = "^3.8.1"
 
 [tool.poetry.group.dev.dependencies]
 pytest = "^7.4.0"
