--- a/backend/pyproject.toml
+++ b/backend/pyproject.toml
@@ -32,6 +32,7 @@ pycryptodome = "^3.20.0"
 matplotlib = "^3.8.0"
 networkx = "^3.1"
 nltk = "^3.8.1"
+keybert = "^0.8.0"
 
 [tool.poetry.group.dev.dependencies]
 pytest = "^7.4.0"
@@ -68,6 +69,7 @@ module = [
     "redis.*",
     "sentence_transformers.*",
     "pgvector.*",
+    "keybert.*",
 ]
 ignore_missing_imports = true
 
