--- a/frontend/.gitignore
+++ b/frontend/.gitignore
@@ -16,6 +16,7 @@
 # next.js
 /.next/
 /out/
+.swc
 
 # production
 /build
@@ -31,7 +32,15 @@ yarn-error.log*
 .pnpm-debug.log*
 
 # env files (can opt-in for committing if needed)
+.env*.local
 .env.local
+.env.development.local
+.env.development
+.env.test.local
+.env.production.local
+.env.production
+.env
+!.env.example
 
 # vercel
 .vercel
