--- a/frontend/package.json
+++ b/frontend/package.json
@@ -16,12 +16,11 @@
     "axios": "^1.6.0",
     "class-variance-authority": "^0.7.0",
     "clsx": "^2.0.0",
-    "cytoscape": "^3.28.0",
-    "cytoscape-cola": "^2.5.1",
+    "d3": "^7.9.0",
     "lucide-react": "^0.292.0",
     "next": "15.5.4",
+    "next-auth": "^4.24.13",
     "react": "19.1.0",
-    "react-cytoscapejs": "^2.0.0",
     "react-dom": "19.1.0",
     "socket.io-client": "^4.7.0",
     "tailwind-merge": "^2.0.0",
