--- a/frontend/package.json
+++ b/frontend/package.json
@@ -24,6 +24,7 @@
     "react-dom": "19.1.0",
     "socket.io-client": "^4.7.0",
     "tailwind-merge": "^2.0.0",
+    "zod": "^4.1.13",
     "zustand": "^4.4.0"
   },
   "devDependencies": {
