--- a/backend/.env.example
+++ b/backend/.env.example
@@ -13,9 +13,14 @@ REDIS_PORT=6379
 CELERY_BROKER_URL=redis://localhost:6379/0
 CELERY_RESULT_BACKEND=redis://redis:6379/0
 
-# Google Drive API
+# Google OAuth Configuration (must match frontend)
+# Get from https://console.cloud.google.com
 GOOGLE_CLIENT_ID=your_client_id_here
 GOOGLE_CLIENT_SECRET=your_client_secret_here
+
+# NextAuth JWT Secret (must match frontend NEXTAUTH_SECRET)
+# Generate with: openssl rand -base64 32
+NEXTAUTH_SECRET=your_nextauth_secret_here
 
 # ML Models
 SENTENCE_TRANSFORMER_MODEL=all-MiniLM-L6-v2
