--- a/backend/pyproject.toml
+++ b/backend/pyproject.toml
@@ -33,6 +33,8 @@ matplotlib = "^3.8.0"
 networkx = "^3.1"
 nltk = "^3.8.1"
 keybert = "^0.8.0"
+python-jose = {extras = ["cryptography"], version = "^3.5.0"}
+email-validator = "^2.3.0"
 
 [tool.poetry.group.dev.dependencies]
 pytest = "^7.4.0"
