--- a/frontend/package.json
+++ b/frontend/package.json
@@ -17,6 +17,7 @@
     "class-variance-authority": "^0.7.0",
     "clsx": "^2.0.0",
     "d3": "^7.9.0",
+    "jose": "^6.1.2",
     "lucide-react": "^0.292.0",
     "next": "15.5.4",
     "next-auth": "^4.24.13",
