--- a/backend/pyproject.toml
+++ b/backend/pyproject.toml
@@ -35,6 +35,7 @@ nltk = "^3.8.1"
 keybert = "^0.8.0"
 python-jose = {extras = ["cryptography"], version = "^3.5.0"}
 email-validator = "^2.3.0"
+httpx = "^0.25.0"
 
 [tool.poetry.group.dev.dependencies]
 pytest = "^7.4.0"
@@ -43,7 +44,6 @@ pytest-cov = "^4.1.0"
 black = "^23.10.0"
 ruff = "^0.1.0"
 mypy = "^1.6.0"
-httpx = "^0.25.0"  # For testing FastAPI
 
 [build-system]
 requires = ["poetry-core"]
