--- a/.gitignore
+++ b/.gitignore
@@ -1,2 +1,41 @@
+# Environment variables
 .env
+
+# IDE
 .vscode
+.idea/
+
+# Python
+__pycache__/
+*.py[cod]
+*$py.class
+*.so
+.Python
+*.egg-info/
+dist/
+build/
+
+# Virtual environments
+venv/
+env/
+ENV/
+
+# Processed files output
+backend/processed_files/
+processed_files/
+
+# Celery
+celerybeat-schedule
+celerybeat.pid
+
+# Database
+*.db
+*.sqlite3
+
+# Logs
+*.log
+logs/
+
+# OS
+.DS_Store
+Thumbs.db
