--- a/backend/pyproject.toml
+++ b/backend/pyproject.toml
@@ -36,6 +36,7 @@ keybert = "^0.8.0"
 python-jose = {extras = ["cryptography"], version = "^3.5.0"}
 email-validator = "^2.3.0"
 httpx = "^0.25.0"
+openai = "^2.8.1"
 
 [tool.poetry.group.dev.dependencies]
 pytest = "^7.4.0"
