add graph view in frontend

--- a/backend/.env.example
+++ b/backend/.env.example
@@ -24,3 +24,5 @@ NEXTAUTH_SECRET=your_nextauth_secret_here
 
 # CORS - use comma-separated list or JSON array
 ALLOWED_ORIGINS=["http://localhost:3000","http://localhost"]
+
+OPENAI_API_KEY=your_openai_key
