--- a/backend/pyproject.toml
+++ b/backend/pyproject.toml
@@ -37,6 +37,7 @@ python-jose = {extras = ["cryptography"], version = "^3.5.0"}
 email-validator = "^2.3.0"
 httpx = "^0.25.0"
 openai = "^2.8.1"
+asyncpg = "^0.29.0"
 
 [tool.poetry.group.dev.dependencies]
 pytest = "^7.4.0"
