--- a/frontend/package.json
+++ b/frontend/package.json
@@ -18,8 +18,8 @@
     "clsx": "^2.1.1",
     "d3": "^7.9.0",
     "jose": "^6.1.3",
-    "lucide-react": "^0.292.0",
-    "next": "15.5.4",
+    "lucide-react": "^0.561.0",
+    "next": "15.5.7",
     "next-auth": "^4.24.13",
     "react": "19.1.0",
     "react-dom": "19.1.0",
@@ -31,15 +31,16 @@
   "devDependencies": {
     "@eslint/eslintrc": "^3.3.3",
     "@tailwindcss/postcss": "^4.1.18",
+    "@testing-library/dom": "^10.4.1",
     "@testing-library/jest-dom": "^6.9.1",
-    "@testing-library/react": "^14.3.1",
+    "@testing-library/react": "^16.3.1",
     "@types/d3": "^7.4.3",
     "@types/jest": "^30.0.0",
     "@types/node": "^20.19.27",
     "@types/react": "^19.2.7",
     "@types/react-dom": "^19.2.3",
     "eslint": "^9.39.2",
-    "eslint-config-next": "15.5.4",
+    "eslint-config-next": "15.5.7",
     "jest": "^29.7.0",
     "jest-environment-jsdom": "^29.7.0",
     "prettier": "3.6.2",
