--- a/k8s/backend/postgres.yaml
+++ b/k8s/backend/postgres.yaml
@@ -67,6 +67,7 @@ spec:
           volumeMounts:
             - name: postgres-data
               mountPath: /var/lib/postgresql/data
+              subPath: pgdata
           livenessProbe:
             exec:
               command:
