--- a/k8s/backend/service.yaml
+++ b/k8s/backend/service.yaml
@@ -16,35 +16,22 @@ spec:
       targetPort: http
       protocol: TCP
 ---
-# Optional: Ingress for external access
-# Uncomment and configure for your ingress controller (nginx, traefik, etc.)
-# apiVersion: networking.k8s.io/v1
-# kind: Ingress
-# metadata:
-#   name: backend-ingress
-#   labels:
-#     app: airelgraph
-#     component: backend
-#   annotations:
-#     # For nginx ingress controller
-#     nginx.ingress.kubernetes.io/proxy-body-size: "50m"
-#     nginx.ingress.kubernetes.io/proxy-read-timeout: "300"
-#     # For cert-manager TLS
-#     cert-manager.io/cluster-issuer: "letsencrypt-prod"
-# spec:
-#   ingressClassName: nginx
-#   tls:
-#     - hosts:
-#         - api.your-domain.com
-#       secretName: backend-tls
-#   rules:
-#     - host: api.your-domain.com
-#       http:
-#         paths:
-#           - path: /
-#             pathType: Prefix
-#             backend:
-#               service:
-#                 name: backend
-#                 port:
-#                   number: 8000
+# Traefik IngressRoute for api-arg.kaelem.dev
+apiVersion: traefik.io/v1alpha1
+kind: IngressRoute
+metadata:
+  name: backend-ingress
+  labels:
+    app: airelgraph
+    component: backend
+spec:
+  entryPoints:
+    - websecure
+  routes:
+    - match: Host(`api-arg.kaelem.dev`)
+      kind: Rule
+      services:
+        - name: backend
+          port: 8000
+  tls:
+    certResolver: letsencrypt
