--- a/k8s/backend/deployment.yaml
+++ b/k8s/backend/deployment.yaml
@@ -53,6 +53,9 @@ spec:
             periodSeconds: 5
             timeoutSeconds: 3
             failureThreshold: 3
+          volumeMounts:
+            - name: processed-files
+              mountPath: /app/processed_files
           command:
             - "uvicorn"
             - "app.main:app"
@@ -60,6 +63,10 @@ spec:
             - "0.0.0.0"
             - "--port"
             - "8000"
+      volumes:
+        - name: processed-files
+          persistentVolumeClaim:
+            claimName: processed-files-pvc
       # Optional: If using private registry
       # imagePullSecrets:
       #   - name: ghcr-secret
