--- a/k8s/backend/shared-storage.yaml
+++ b/k8s/backend/shared-storage.yaml
@@ -11,4 +11,4 @@ spec:
   resources:
     requests:
       storage: 5Gi
-  storageClassName: truenas-nfs-nfs-subdir-external-provisioner
+  storageClassName: truenas-nfs
